# HappySardines

./: .env.example  .gitignore  README.md  README_V2.md  backfill-event-data.py  backfill-holiday-data.py  backfill-trafikverket-data.py  backfill-transportation-data.py  backfill-weather-data.py  main.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: daily_feature_pipeline.yml  daily_inference.yml  heatmap.yml  inference.yml  training.yml
.github/workflows/.github/workflows/: daily_feature_pipeline.yml
docs/: class_imbalance_analysis.md  traffic_events_analysis.md
observability-dashboard/: dashboard.py
pipelines/: daily-feature-pipeline.py  experiment_model.ipynb  inference_pipeline.ipynb  inference_pipeline.py  run_inference.py  run_training.py  training_pipeline.ipynb  training_pipeline.py
ui/: README.md  app.py  contours.py  get_boundaries.py  precompute_heatmaps.py  precomputed_contours.json  precomputed_heatmaps.pkl  predictor.py  requirements.txt  test_map.py  trip_info.py  weather.py
ui/gradio-backup/: app.py  holidays.py  predictor.py  requirements.txt
ui/pages/: Monitoring.py
